--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "chart.js": "^4.4.7",
     "cra-template-typescript": "1.2.0",
     "date-fns": "^4.1.0",
+    "downsample-lttb": "^0.0.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.6.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1"
   },
@@ -36,6 +40,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.0.2",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
